// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox renders SearchBox correctly 1`] = `
<div
  className=
      ms-SearchBox
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: stretch;
        background-color: #ffffff;
        border-radius: 2px;
        border: 1px solid #605e5c;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 32px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 1px;
        padding-left: 4px;
        padding-right: 0;
        padding-top: 1px;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        border-color: WindowText;
      }
      &:hover {
        border-color: #323130;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
        border-color: Highlight;
      }
      &:hover .ms-SearchBox-iconContainer {
        color: #005a9e;
      }
  onFocusCapture={[Function]}
>
  <div
    aria-hidden={true}
    className=
        ms-SearchBox-iconContainer
        {
          color: #0078d4;
          cursor: text;
          display: flex;
          flex-direction: column;
          flex-shrink: 0;
          font-size: 16px;
          justify-content: center;
          text-align: center;
          transition: width 0.167s;
          width: 32px;
        }
    onClick={[Function]}
  >
    <i
      aria-hidden={true}
      className=
          ms-SearchBox-icon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: inline-block;
            font-family: "FabricMDL2Icons";
            font-style: normal;
            font-weight: normal;
            opacity: 1;
            speak: none;
            transition: opacity 0.167s 0s;
          }
      data-icon-name="Search"
    >
      
    </i>
  </div>
  <input
    className=
        ms-SearchBox-field
        {
          background-color: transparent;
          border: none;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          flex: 1 1 0px;
          font-family: inherit;
          font-size: inherit;
          font-weight: inherit;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          min-width: 0px;
          outline: none;
          overflow: hidden;
          padding-bottom: 0.5px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          text-overflow: ellipsis;
        }
        &::placeholder {
          color: #605e5c;
          opacity: 1;
        }
        &:-ms-input-placeholder {
          color: #605e5c;
          opacity: 1;
        }
        &::-ms-input-placeholder {
          color: #605e5c;
          opacity: 1;
        }
        &::-ms-clear {
          display: none;
        }
    id="SearchBox0"
    onBlur={[Function]}
    onChange={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    role="searchbox"
    value=""
  />
  <div
    className=
        ms-SearchBox-clearButton
        {
          align-items: stretch;
          cursor: pointer;
          display: flex;
          flex-basis: 32px;
          flex-direction: row;
          flex-shrink: 0;
          margin-bottom: -1px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: -1px;
          opacity: 0;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
        }
        &:hover .ms-Button {
          background-color: #f3f2f1;
        }
        &:hover .ms-Button-icon {
          color: #323130;
        }
        & .ms-Button {
          border-radius: 0 1px 1px 0;
        }
        & .ms-Button-icon {
          color: #605e5c;
        }
  >
    <button
      aria-label="Clear text"
      className=
          ms-Button
          ms-Button--icon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #0078d4;
            cursor: pointer;
            display: inline-block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 4px;
            padding-right: 4px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            width: 32px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > * {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #106ebe;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
          &:active {
            background-color: #edebe9;
            color: #005a9e;
          }
      data-is-focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-Button-icon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                flex-shrink: 0;
                font-size: 12px;
                height: 16px;
                line-height: 16px;
                margin-bottom: 0;
                margin-left: 4px;
                margin-right: 4px;
                margin-top: 0;
                text-align: center;
              }
          data-icon-name="Clear"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`SearchBox renders SearchBox without animation correctly 1`] = `
<div
  className=
      ms-SearchBox
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: stretch;
        background-color: #ffffff;
        border-radius: 2px;
        border: 1px solid #605e5c;
        box-shadow: none;
        box-sizing: border-box;
        color: #323130;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 32px;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 1px;
        padding-left: 4px;
        padding-right: 0;
        padding-top: 1px;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
        border-color: WindowText;
      }
      &:hover {
        border-color: #323130;
      }
      @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
        border-color: Highlight;
      }
      &:hover .ms-SearchBox-iconContainer {
        color: #005a9e;
      }
  onFocusCapture={[Function]}
>
  <div
    aria-hidden={true}
    className=
        ms-SearchBox-iconContainer
        {
          color: #0078d4;
          cursor: text;
          display: flex;
          flex-direction: column;
          flex-shrink: 0;
          font-size: 16px;
          justify-content: center;
          text-align: center;
          width: 32px;
        }
    onClick={[Function]}
  >
    <i
      aria-hidden={true}
      className=
          ms-SearchBox-icon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: inline-block;
            font-family: "FabricMDL2Icons";
            font-style: normal;
            font-weight: normal;
            opacity: 1;
            speak: none;
          }
      data-icon-name="Search"
    >
      
    </i>
  </div>
  <input
    className=
        ms-SearchBox-field
        {
          background-color: transparent;
          border: none;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          flex: 1 1 0px;
          font-family: inherit;
          font-size: inherit;
          font-weight: inherit;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          min-width: 0px;
          outline: none;
          overflow: hidden;
          padding-bottom: 0.5px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          text-overflow: ellipsis;
        }
        &::placeholder {
          color: #605e5c;
          opacity: 1;
        }
        &:-ms-input-placeholder {
          color: #605e5c;
          opacity: 1;
        }
        &::-ms-input-placeholder {
          color: #605e5c;
          opacity: 1;
        }
        &::-ms-clear {
          display: none;
        }
    id="SearchBox0"
    onBlur={[Function]}
    onChange={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    role="searchbox"
    value=""
  />
  <div
    className=
        ms-SearchBox-clearButton
        {
          align-items: stretch;
          cursor: pointer;
          display: flex;
          flex-basis: 32px;
          flex-direction: row;
          flex-shrink: 0;
          margin-bottom: -1px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: -1px;
          opacity: 0;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
        }
        &:hover .ms-Button {
          background-color: #f3f2f1;
        }
        &:hover .ms-Button-icon {
          color: #323130;
        }
        & .ms-Button {
          border-radius: 0 1px 1px 0;
        }
        & .ms-Button-icon {
          color: #605e5c;
        }
  >
    <button
      aria-label="Clear text"
      className=
          ms-Button
          ms-Button--icon
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            background-color: transparent;
            border-radius: 2px;
            border: none;
            box-sizing: border-box;
            color: #0078d4;
            cursor: pointer;
            display: inline-block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            outline: transparent;
            padding-bottom: 0;
            padding-left: 4px;
            padding-right: 4px;
            padding-top: 0;
            position: relative;
            text-align: center;
            text-decoration: none;
            user-select: none;
            width: 32px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid transparent;
            bottom: 2px;
            content: "";
            left: 2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: 2px;
            top: 2px;
            z-index: 1;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
            bottom: -2px;
            left: -2px;
            outline-color: ButtonText;
            right: -2px;
            top: -2px;
          }
          &:active > * {
            left: 0px;
            position: relative;
            top: 0px;
          }
          &:hover {
            background-color: #f3f2f1;
            color: #106ebe;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
            color: Highlight;
          }
          &:active {
            background-color: #edebe9;
            color: #005a9e;
          }
      data-is-focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className=
            ms-Button-flexContainer
            {
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              height: 100%;
              justify-content: center;
            }
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className=
              ms-Icon
              ms-Button-icon
              {
                display: inline-block;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                font-family: "FabricMDL2Icons";
                font-style: normal;
                font-weight: normal;
                speak: none;
              }
              {
                flex-shrink: 0;
                font-size: 12px;
                height: 16px;
                line-height: 16px;
                margin-bottom: 0;
                margin-left: 4px;
                margin-right: 4px;
                margin-top: 0;
                text-align: center;
              }
          data-icon-name="Clear"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
  </div>
</div>
`;
